# btc-bot

./: .env.example  .env.sample  .gitignore  24H_CHECKPOINT_20251024.md  24H_CHECKPOINT_20251031.md  7DAY_CHECKPOINT_20251030.md  ADAPTIVE_TRADING_SYSTEM.md  AGENT_SETUP_GUIDE.md  ANALYSIS_COMPLETE_SUMMARY_20251104.txt  API_TEST_RESULTS_2025-11-06.md  ARCHITECTURE.md  BACKTEST_FAILURE_REPORT_NOV4.md  BINANCE_SETUP_GUIDE.md  BOT1_BOT6_OPTIMIZATION_PARAMS.md  BOT1_BOT6_OPTIMIZATION_REPORT.md  BOT1_BOT6_RISK_VALIDATION.md  BOT2_BOT4_FINAL_DECISION_MATRIX.md  BOT2_BOT4_OPTIMIZATION_PLAN.md  BOT2_BOT4_PAUSE_RISK_ASSESSMENT.md  BOT2_BOT4_PAUSE_SUMMARY.txt  BOT2_BOT4_PROBABILITY_ANALYSIS.py  BOT2_BOT4_PROBABILITY_ANALYSIS_SIMPLE.py  BOT2_BOT4_SCIENTIFIC_VALIDATION_REPORT.md  BOT2_BOT4_STRATEGIC_ASSESSMENT.md  BOT3_OPTIMIZATION_REPORT.md  BOT4_RISK_SUMMARY_EXECUTIVE.txt  BOT4_RISK_VALIDATION_FINAL.md  BOT4_VALIDATION_INDEX.md  BOT4_VALIDATION_QUICK_REFERENCE.txt  BOT5_FIX_COMPLETE.md  BOT5_SUCCESS_DNA.md  CHANGELOG.md  CHECKPOINT.md  CHECKPOINT_2025_09_28.md  CHECKPOINT_2025_10_15.md  CHECKPOINT_2025_10_18.md  CHECKPOINT_2025_10_23.md  CONFIDENCE_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  CORRELATION_ANALYSIS_REPORT_20251104.md  (+103 more)
ai_brain/: __init__.py  data_integrity_validator.py  experience_replay.py  historical_data_fetcher.py  hypothesis_cleaner.py  hypothesis_generator.py  learning_engine.py  llm_analyzer.py  news_fetcher.py  onchain_monitor.py  paper_trading_engine.py  realtime_market_data.py  sentiment_analyzer.py
archive_freqtrade/: analyze_bots.py  analyze_market.py  (+17 more)
(+98 files in other folders)
